--- a/mlbgame/azfunctions/.vscode/settings.json
+++ b/mlbgame/azfunctions/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "azureFunctions.deploySubpath": "azfunctions.zip",
-    "azureFunctions.pythonVenv": ".venv",
+    "azureFunctions.deploySubpath": "azMlbGameDay/azMlbGameDay.zip",
+    "azureFunctions.pythonVenv": ".env",
     "azureFunctions.projectLanguage": "Python",
     "azureFunctions.projectRuntime": "~2",
     "debug.internalConsoleOptions": "neverOpen",
